# pm-utils

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile  Makefile.am  NEWS  PKGBUILD  README  README.debian-branch  README.debugging  README.distributions  README.native-quirk-db  README.smart-suspend-to-RAM  TODO  autogen.sh  configure.ac  configure.in  mailtest  make-arch-pkg  make-deb  make-rpm  on_ac_power.c  pm-hibernate  pm-suspend  pm-utils.pc.in  pm-utils.spec.in  test-pm-utils
debian/: Makefile.am  README  README.Debian  control  copyright  pm-utils.doc-base.EX  rules
man/: .cvsignore  .gitignore  Makefile.am  on_ac_power.1  on_ac_power.sgml  on_ac_power.xml  pm-action.xml  pm-is-supported.xml  pm-pmu.1  pm-pmu.sgml  pm-pmu.xml  pm-powersave.xml
pm/: .gitignore  HOWTO.hooks  HOWTO.modules  Makefile.am  config  defaults  functions  functions-ati  functions-intel  functions-nvidia  functions.in  pm-functions.in
pm/config.d/: rtcwake.config
pm/hooks/: 00NetworkManager  00clear  00logging  01grub  05led  10NetworkManager  10video  20video  49bluetooth  50modules  55battery  60sysfont  65alsa  90clock  94cpufreq  95led  99clock  99video  Makefile.am
pm/module.d/: Makefile.am  README.uswsusp  kernel  tuxonice  uswsusp
pm/power.d/: Makefile.am  disable_wol  hal-cd-polling  harddrive  intel-audio-powersave  iwl-pm  journal-commit  laptop-mode  laptop-tools  readahead  sata-pm  sata_alpm  sched-powersave  sound-pm  wireless  wol  xfs_buffer
pm/sleep.d/: 00auto-quirk  00clear  00logging  00powersave  01grub  01logging  02rtcwake  05led  05nfscheck  06autofs  10NetworkManager  20video  30s2disk-check  45pcmcia  49bluetooth  50modules  50ntpd  50rcnetwork  55NetworkManager  55battery  60sysfont  65alsa  75modules  75ndiswrapper  80acpi-fan  80videobios  90clock  94cpufreq  95led  98-video-quirk-db-handler  98smart-kernel-video  98video-quirk-db-handler  99Zgrub  99info  99video  Makefile.am  zzz
src/: .cvsignore  .gitignore  Makefile.am  import-fdi-quirkdb.in  on_ac_power  pm-action  pm-action.in  pm-is-supported  pm-is-supported.in  pm-pmu.c  pm-powersave  pm-powersave.in  pm-reset-swap.c  service
